--- a/src/AspNetWebCL.Web/Views/Shared/_Layout.cshtml
+++ b/src/AspNetWebCL.Web/Views/Shared/_Layout.cshtml
@@ -44,6 +44,11 @@
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <!-- SignalR -->
+        <script src="~/lib/signalr/jquery.unobtrusive-ajax.min.js"></script>
+        <script src="~/lib/signalr/jquery.signalR-2.2.0.min.js"></script>
+        <script src="~/signalr/hubs"></script>
+
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
@@ -55,7 +60,13 @@
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
         </script>
+        <!-- SignalR -->
+        <script src="~/lib/signalr/jquery.unobtrusive-ajax.min.js"></script>
+        <script src="~/lib/signalr/jquery.signalR-2.2.0.min.js"></script>
+        <script src="~/signalr/hubs"></script>
+
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+
     </environment>
 
     @RenderSection("scripts", required: false)
